--- a/languages/es.json
+++ b/languages/es.json
@@ -87,7 +87,7 @@
         "createSubscriptions": "Crear Membresía",
         "notPlan": "Actualmente no se encuentra en ningún plan. Favor adquirir una subscripción abajo.",
         "notHappy": "Cancele o Maneje su subscripción al darle al botón abajo.",
-        "disclaimer": "Esto es una subscripción por 30 días desde el momento de la compra.",
+        "disclaimer": "Esto es una subscripción autorrenovable cada 30 días desde el momento de la compra.",
         "perGroupOf": "por grupo de",
         "manageBilling": "Manejar Facturación",
         "info": "Información de Membresía",
