Add camera id on Location model, views and forms.

--- a/languages/es.json
+++ b/languages/es.json
@@ -208,5 +208,7 @@
     },
     "clear": "Limpiar",
     "utilizationHistory": "Historial de Utilización",
-    "loading": "Cargando"
+    "loading": "Cargando",
+    "cameraID": "Cámara ID"
+
 }
