Change camera_id to agentID to link the location with the rekor scout agent.

--- a/languages/en.json
+++ b/languages/en.json
@@ -209,5 +209,5 @@
     "clear": "Clear",
     "utilizationHistory": "Utilization History",
     "loading": "Loading",
-    "cameraID": "Camera ID"
+    "agentID": "Agent ID"
 }
