--- a/languages/es.json
+++ b/languages/es.json
@@ -209,6 +209,6 @@
     "clear": "Limpiar",
     "utilizationHistory": "Historial de Utilización",
     "loading": "Cargando",
-    "cameraID": "Cámara ID"
+    "agentID": "Agent ID"
 
 }
