Generalize and organize the password field. Remove password requirements. Change wording of Plate to License Plate. Remove DOB and City.

--- a/languages/en.json
+++ b/languages/en.json
@@ -28,8 +28,8 @@
         "cars": "Cars",
         "name": "Car",
         "manageMyCars": "Manage My Cars",
-        "plate": "Plate",
-        "plateNumber": "Plate Number",
+        "plate": "License Plate",
+        "plateNumber": "License Plate Number",
         "brand": "Brand",
         "model": "Model",
         "carsQty": "Cars Qty.",
@@ -39,8 +39,8 @@
         "maxServiceQty": "This car has the maximum quantity of services for the day",
         "carExpiredOn": "This car expired on {date}",
         "notFound": "Car not found",
-        "existingCar": "This is an existing Car Plate in the system. Please provide another plate",
-        "validCar": "Valid Car Plate",
+        "existingCar": "This is an existing Car License Plate in the system. Please provide another plate",
+        "validCar": "Valid Car License Plate",
         "membershipToAddCar": "Membership to add a Car",
         "alreadyAddedToCart": "This car is already added to the cart.",
         "selectOrCreate": "Select or create a new car"
@@ -89,7 +89,7 @@
         "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below.",
         "disclaimer": "This is an auto-renewable subscription every 30 days upon purchase date.",
         "perGroupOf": "per group of",
-        "manageBilling": "Manage Billing",
+        "manageBilling": "Manage Memberships",
         "info": "Membership Information",
         "period": "Period",
         "startDate": "Start Date",
