--- a/languages/es.json
+++ b/languages/es.json
@@ -19,31 +19,31 @@
     "members": "Miembros",
     "add": "Añadir",
     "car": {
-        "myCars": "Mis Carros",
-        "view": "Ver Carro",
-        "info": "Información del Carro",
-        "add": "Añadir Carro",
-        "edit": "Editar Carro",
-        "all": "Todos los Carros",
-        "cars": "Carros",
-        "name": "Carro",
-        "manageMyCars": "Manejar mis Carros",
+        "myCars": "Mis vehículos",
+        "view": "Ver Vehículo",
+        "info": "Información del vehículo",
+        "add": "Añadir Vehículo",
+        "edit": "Editar Vehículo",
+        "all": "Todos los Vehículos",
+        "cars": "Vehículos",
+        "name": "Vehículo",
+        "manageMyCars": "Manejar mis vehículos",
         "plate": "Tablilla",
         "plateNumber": "Número de Tablilla",
         "brand": "Marca",
         "model": "Modelo",
-        "carsQty": "Cantidad de Carros",
-        "addMissingCar": "Añadir Carro Restante",
+        "carsQty": "Cantidad de Vehículos",
+        "addMissingCar": "Añadir Vehículo Restante",
         "toUseOnNextPeriod": "Para usarse en el próximo periodo",
-        "confirmCarsForNextPeriod": "Confirme carros para el próximo periodo",
-        "maxServiceQty": "Este carro excedió la cantidad máxima de servicios en un día",
-        "carExpiredOn": "Este carro expiró en {date}",
-        "notFound": "Carro no encontrado en sistema",
+        "confirmCarsForNextPeriod": "Confirme vehículos para el próximo periodo",
+        "maxServiceQty": "Este vehículo excedió la cantidad máxima de servicios en un día",
+        "carExpiredOn": "El uso de este vehículo expiró en {date}",
+        "notFound": "Vehículo no encontrado en sistema",
         "existingCar": "La tablilla existe en nuestro sistema. Favor proveer otro número de tablilla",
         "validCar": "Número de Tablilla Valido",
-        "membershipToAddCar": "Membresía a la que va añadir el carro",
-        "alreadyAddedToCart": "Este carro ya fué añadido a la lista.",
-        "selectOrCreate": "Seleccione o cree un nuevo carro"
+        "membershipToAddCar": "Membresía a la que va añadir el vehículo",
+        "alreadyAddedToCart": "Este vehículo ya fué añadido a la lista.",
+        "selectOrCreate": "Seleccione o cree un nuevo vehículo"
     },
     "user": {
         "name": "Usuario",
@@ -89,7 +89,7 @@
         "notHappy": "Cancele o Maneje su subscripción al darle al botón abajo.",
         "disclaimer": "Esto es una subscripción autorrenovable cada 30 días desde el momento de la compra.",
         "perGroupOf": "por grupo de",
-        "manageBilling": "Manejar Facturación",
+        "manageBilling": "Manejar Membresías",
         "info": "Información de Membresía",
         "period": "Periodo",
         "startDate": "Fecha de Comienzo",
