--- a/languages/en.json
+++ b/languages/en.json
@@ -107,7 +107,8 @@
         "price": "Price",
         "subTotal": "Sub Total",
         "proceedToCheckout": "Proceed to Checkout",
-        "selectMembership": "Select membership plan"
+        "selectMembership": "Select membership plan",
+        "completeSubscription" : "Complete Subscription"
     },
     "service": {
         "qty": "Service (Qty.)",
