Continue development of registerAndSubscribe. Create routes for activate account with a token via email. Add displayLoading function in helper-functions.js Add type field to Token Model. Update addUser to receive the isActive field. Update the Token handlers functions to use the Type between password and account tokens. Add backURL to checkouts session. Remove unnecessary code in the completeCheckoutSuccess function. Add new case to the emailType

--- a/languages/en.json
+++ b/languages/en.json
@@ -8,6 +8,9 @@
     "login": "Login",
     "signOut": "Sign Out",
     "register": "Register",
+    "activateAccount": "Activate Account",
+    "completeAccount": "Complete Account",
+    "activate": "Activate",
     "pricingList": "Pricing List",
     "dontHaveAccount": "Don't have an account?",
     "create": "Create",
