--- a/languages/es.json
+++ b/languages/es.json
@@ -8,6 +8,9 @@
     "login": "Iniciar Sesión",
     "signOut": "Cerrar Sesión",
     "register": "Registrar",
+    "activateAccount": "Activar Cuenta",
+    "completeAccount": "Completar Cuenta",
+    "activate": "Activar",
     "pricingList": "Lista de Precios",
     "dontHaveAccount": "¿No tiene una cuenta?",
     "create": "Crear",
