Bug fixes to the activate account function. Add validations. Bug fixes in sendEmail function.

--- a/languages/en.json
+++ b/languages/en.json
@@ -216,5 +216,6 @@
     "clear": "Clear",
     "utilizationHistory": "Utilization History",
     "loading": "Loading",
-    "agentID": "Agent ID"
+    "agentID": "Agent ID",
+    "subscribe" : "Subcribe"
 }
