--- a/languages/es.json
+++ b/languages/es.json
@@ -216,5 +216,7 @@
     "clear": "Limpiar",
     "utilizationHistory": "Historial de Utilización",
     "loading": "Cargando",
-    "agentID": "Agent ID"
+    "agentID": "Agent ID",
+    "subscribe" : "Subcribirte"
+
 }
