--- a/languages/en.json
+++ b/languages/en.json
@@ -217,5 +217,5 @@
     "utilizationHistory": "Utilization History",
     "loading": "Loading",
     "agentID": "Agent ID",
-    "subscribe" : "Subcribe"
+    "subscribe" : "Subscribe"
 }
