Implement step after complete checkout process. Remove google btn from login. Optimize account validation.

--- a/languages/es.json
+++ b/languages/es.json
@@ -5,11 +5,18 @@
     "termsAndConditions": "Términos y Condiciones",
     "title": "Portal de Membresías",
     "welcome": "Bienvenido",
+    "welcomeUser": "¡Bienvenido, {username}!",
+    "thanksUser": "¡Gracias por escoger la membresía ilimitada de Charlie Boy!",
+    "verifyEmail": "Verifique su correco electrónico para activar tu cuenta. De no haber recibido un correo electrónico presione aquí:",
+    "membershipCreatedSuccess": "¡La membresia ha sido creada exisotamente!",
+    "pressLink": "Presione el link de abajo para ver su membresía:",
+    "processCompleted": "Proceso completado!",
     "login": "Iniciar Sesión",
     "signOut": "Cerrar Sesión",
     "register": "Registrar",
     "activateAccount": "Activar Cuenta",
     "completeAccount": "Completar Cuenta",
+    "account": "Cuenta",
     "activate": "Activar",
     "pricingList": "Lista de Precios",
     "dontHaveAccount": "¿No tiene una cuenta?",
