--- a/languages/en.json
+++ b/languages/en.json
@@ -5,11 +5,18 @@
     "termsAndConditions": "Terms and Conditions",
     "title": "Membership Portal",
     "welcome": "Welcome",
+    "welcomeUser": "¡Welcome, {username}!",
+    "thanksUser": "Thank you for choosing Charlie Boy's unlimited membership!",
+    "verifyEmail": "Please check your email to activate your account. If you have not received an email, press here:",
+    "membershipCreatedSuccess": "Your membership has been created successfully!",
+    "pressLink": "Press the link below to view your membership:",
+    "processCompleted": "Process has completed!",
     "login": "Login",
     "signOut": "Sign Out",
     "register": "Register",
     "activateAccount": "Activate Account",
     "completeAccount": "Complete Account",
+    "account": "Account",
     "activate": "Activate",
     "pricingList": "Pricing List",
     "dontHaveAccount": "Don't have an account?",
