--- a/languages/en.json
+++ b/languages/en.json
@@ -10,7 +10,7 @@
     "verifyEmail": "Please check your email to activate your account. If you have not received an email, press here:",
     "membershipCreatedSuccess": "Your membership has been created successfully!",
     "pressLink": "Press the link below to view your membership:",
-    "processCompleted": "Process has completed!",
+    "processCompleted": "Process completed!",
     "login": "Login",
     "signOut": "Sign Out",
     "register": "Register",
