Update the Stripe Customer information (Email, Name and Phone) after update the DB user.

--- a/languages/en.json
+++ b/languages/en.json
@@ -90,7 +90,8 @@
             "characters": "characters"
         },
         "authorizedBy": "Authorized By",
-        "notFound": "Customer not found"
+        "notFound": "Customer not found",
+        "billingID" : "Billing ID (Stripe ID)"
     },
     "membership": {
         "name": "Membership",
